# plotline

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml
docs/: FAQ.md  arc-enhancement-proposal.md  creative-brief.md  diarization-setup.md  export-guide.md  getting-started.md  glossary.md  index.html  index.md  plotline-presentation.pptx.md  presentation.html  presentation.md  reports-guide.md  workflow-analysis.md  workflow-guide.md
llm/: ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  PROMPTS.md  RESOLVE.md
plotline/: __init__.py  brief.py  cli.py  compare.py  config.py  exceptions.py  io.py  logging.py  project.py  utils.py  validation.py
plotline/analyze/: __init__.py  delivery.py  scoring.py
plotline/diarize/: __init__.py  align.py  engine.py  speakers.py
plotline/enrich/: __init__.py  merge.py
plotline/export/: __init__.py  edl.py  fcpxml.py  timecode.py
plotline/extract/: __init__.py  audio.py
plotline/llm/: __init__.py  arc.py  client.py  flags.py  parsing.py  synthesis.py  templates.py  themes.py
plotline/profiles/: brand.yaml  commercial-doc.yaml  documentary.yaml
plotline/reports/: __init__.py  compare.py  coverage.py  dashboard.py  generator.py  review.py  summary.py  themes.py  transcript.py
plotline/transcribe/: __init__.py  (+1 more)
prompts/: arc.txt  flags.txt  synthesize.txt  themes.txt  themes_brand.txt
tests/: conftest.py  test_analyze.py  test_brief.py  test_cli.py  test_compare.py  test_config.py  test_coverage_report.py  test_dashboard_report.py  test_diarize.py  test_enrich.py  test_export.py  test_extract.py  test_flags.py  test_io.py  test_llm.py  test_llm_passes.py  test_project.py  test_transcribe.py  test_transcript_report.py  test_utils.py  test_validation.py
(+8 files in other folders)
